--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Era Institute - Tution</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function() {
+        emailjs.init("user_wZPESL5oyGmS88sqFY5by");
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
